--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="hu">
 <head>
 <meta charset="UTF-8">
@@ -7,13 +7,11 @@
 
 <style>
 * { box-sizing: border-box; }
-
 body {
   font-family: Arial, sans-serif;
   background: #f5f5f5;
   padding: 20px;
 }
-
 .container {
   background: #fff;
   max-width: 900px;
@@ -21,74 +19,37 @@ body {
   padding: 30px;
   border: 1px solid #ccc;
 }
-
-h2 {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
+h2 { text-align: center; margin-bottom: 30px; }
 .top-info {
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
   font-weight: bold;
 }
-
-label {
-  font-weight: bold;
-  display: block;
-  margin-top: 18px;
-}
-
+label { font-weight: bold; display: block; margin-top: 18px; }
 input, select, textarea, canvas {
   width: 100%;
   margin-top: 6px;
 }
-
 input, select, textarea {
   padding: 10px;
   font-size: 15px;
 }
-
-textarea {
-  min-height: 90px;
-  resize: vertical;
-}
-
-.row {
-  display: flex;
-  gap: 20px;
-}
-
-.row > div {
-  flex: 1;
-}
-
+textarea { min-height: 90px; }
+.row { display: flex; gap: 20px; }
+.row > div { flex: 1; }
 canvas {
   border: 1px solid #000;
   height: 150px;
-  touch-action: none;
   background: #fff;
 }
-
-.checkbox {
-  margin-top: 18px;
-}
-
-.checkbox label {
-  font-weight: normal;
-}
-
-.checkbox input {
-  transform: scale(1.2);
-}
-
+.checkbox { margin-top: 12px; }
+.checkbox label { font-weight: normal; }
 button {
-  margin-top: 20px;
+  margin-top: 25px;
   padding: 14px;
   width: 100%;
   font-size: 16px;
-  cursor: pointer;
 }
 </style>
 
@@ -96,8 +57,6 @@ button {
 </head>
 
 <body>
-
-<!-- ⚠️ FONTOS: MINDEN BENNE VAN A DOC-BAN -->
 <div class="container" id="doc">
 
 <h2>Azonosító lap</h2>
@@ -108,16 +67,16 @@ button {
 </div>
 
 <label>Megbízó neve</label>
-<input type="text" id="gazdaNev">
+<input id="gazdaNev">
 
 <label>Cím</label>
-<input type="text" id="cim">
+<input id="cim">
 
 <label>Telefonszám</label>
 <input type="tel">
 
 <label>Megbízott</label>
-<input type="text" value="Budai Tamás e.v." readonly>
+<input value="Budai Tamás e.v." readonly>
 
 <label>Állat adatai</label>
 <select id="allatFajta">
@@ -129,8 +88,51 @@ button {
 
 <div id="egyebAllat" style="display:none;">
   <label>Milyen állat?</label>
-  <input type="text">
+  <input>
 </div>
+
+<div class="row">
+  <div>
+    <label>Név</label>
+    <input>
+  </div>
+  <div>
+    <label>Chip szám</label>
+    <input>
+  </div>
+</div>
+
+<div class="row">
+  <div>
+    <label>Állat neme</label>
+    <select>
+      <option>Hím</option>
+      <option>Nőstény</option>
+      <option>Ismeretlen</option>
+    </select>
+  </div>
+  <div>
+    <label>Súly (kg)</label>
+    <input type="number">
+  </div>
+</div>
+
+<label>Implantátum?</label>
+<div class="checkbox"><label>Igen</label><input type="checkbox"></div>
+<div class="checkbox"><label>Nem</label><input type="checkbox"></div>
+
+<label>Milyen urna?</label>
+<input>
+
+<label>Urna állapota</label>
+<select>
+  <option>Ragasztva</option>
+  <option>Nem ragasztva</option>
+</select>
+
+<label>Fizetés módja</label>
+<div class="checkbox"><label>Készpénz</label><input type="checkbox"></div>
+<div class="checkbox"><label>Átutalás</label><input type="checkbox"></div>
 
 <label>Megjegyzés</label>
 <textarea></textarea>
@@ -139,85 +141,50 @@ button {
 <canvas id="signUser"></canvas>
 
 <label>Ügyfél email címe</label>
-<input type="email" id="ugyfelEmail" required>
+<input id="ugyfelEmail" type="email">
 
 <button id="pdfBtn">PDF készítés és küldés</button>
 
 </div>
 
 <script>
-// ===== DÁTUM =====
 const d = new Date();
-const datumStr = d.toLocaleDateString("hu-HU");
-document.getElementById("datum").innerText = datumStr;
-
-// ===== ÉRKEZTETÉS =====
+const ds = `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
+datum.innerText = ds;
 let c = localStorage.getItem("erk") || 0;
 localStorage.setItem("erk", ++c);
-document.getElementById("erkszam").innerText = `${d.getFullYear()}-${String(c).padStart(4,"0")}`;
+erkszam.innerText = `${ds}-${String(c).padStart(4,"0")}`;
 
-// ===== ALÁÍRÁS =====
+allatFajta.onchange = e =>
+  egyebAllat.style.display = e.target.value==="Egyéb" ? "block" : "none";
+
 const canvas = document.getElementById("signUser");
 const ctx = canvas.getContext("2d");
 canvas.width = canvas.offsetWidth;
 canvas.height = 150;
-let draw = false;
+let draw=false;
+canvas.onmousedown=e=>{draw=true;ctx.moveTo(e.offsetX,e.offsetY)};
+canvas.onmousemove=e=>{if(draw){ctx.lineTo(e.offsetX,e.offsetY);ctx.stroke()}};
+canvas.onmouseup=()=>draw=false;
 
-canvas.addEventListener("mousedown", e => {
-  draw = true;
-  ctx.beginPath();
-  ctx.moveTo(e.offsetX, e.offsetY);
-});
-
-canvas.addEventListener("mousemove", e => {
-  if(!draw) return;
-  ctx.lineTo(e.offsetX, e.offsetY);
-  ctx.stroke();
-});
-
-["mouseup","mouseleave"].forEach(ev =>
-  canvas.addEventListener(ev, () => draw = false)
-);
-
-// ===== FÁJLNÉV TISZTÍTÁS =====
-function clean(str){
-  return str.normalize("NFD")
-    .replace(/[\u0300-\u036f]/g,"")
-    .replace(/[^a-zA-Z0-9]+/g,"_")
-    .replace(/^_|_$/g,"");
+function clean(s){
+  return s.normalize("NFD").replace(/[\u0300-\u036f]/g,"").replace(/[^a-zA-Z0-9]+/g,"_");
 }
 
-// ===== PDF + EMAIL =====
 pdfBtn.onclick = async () => {
-  if(!ugyfelEmail.value) {
-    alert("Add meg az email címet!");
-    return;
-  }
-
-  const gazda = clean(gazdaNev.value || "gazda");
-  const cimClean = clean(cim.value || "cim");
-  const datumClean = datumStr.replaceAll(".","-");
-
-  const fileName = `azonosito_lap_${gazda}_${cimClean}_${datumClean}.pdf`;
+  const fileName = `azonosito_${ds}_${clean(gazdaNev.value)}_${clean(cim.value)}.pdf`;
 
   const pdfBlob = await html2pdf()
     .from(document.getElementById("doc"))
-    .set({
-      margin: 10,
-      html2canvas: { scale: 1, scrollY: 0 },
-      jsPDF: { unit: "mm", format: "a4" }
-    })
+    .set({ html2canvas:{scale:1}, jsPDF:{format:"a4"} })
     .outputPdf("blob");
 
   const fd = new FormData();
   fd.append("pdf", pdfBlob, fileName);
   fd.append("ugyfelEmail", ugyfelEmail.value);
-  fd.append("gazdaNev", gazdaNev.value);
-  fd.append("cim", cim.value);
 
-  await fetch("/send-pdf", { method: "POST", body: fd });
-
-  alert("PDF elküldve!");
+  await fetch("/send-pdf",{method:"POST",body:fd});
+  alert("Kész!");
 };
 </script>
 
