--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="hu">
 <head>
 <meta charset="UTF-8">
@@ -7,50 +7,23 @@
 
 <style>
 * { box-sizing: border-box; }
-body {
-  font-family: Arial, sans-serif;
-  background: #f5f5f5;
-  padding: 20px;
-}
-.container {
-  background: #fff;
-  max-width: 900px;
-  margin: auto;
-  padding: 30px;
-  border: 1px solid #ccc;
-}
-h2 { text-align: center; margin-bottom: 30px; }
-.top-info {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 25px;
-  font-weight: bold;
-}
-label { font-weight: bold; display: block; margin-top: 18px; }
-input, select, textarea, canvas {
-  width: 100%;
-  margin-top: 6px;
-}
-input, select, textarea {
-  padding: 10px;
-  font-size: 15px;
-}
-textarea { min-height: 90px; }
-.row { display: flex; gap: 20px; }
-.row > div { flex: 1; }
-canvas {
-  border: 1px solid #000;
-  height: 150px;
-  background: #fff;
-}
-.checkbox { margin-top: 12px; }
-.checkbox label { font-weight: normal; }
-button {
-  margin-top: 25px;
-  padding: 14px;
-  width: 100%;
-  font-size: 16px;
-}
+body { font-family: Arial, sans-serif; background:#f5f5f5; padding:20px; }
+.container { background:#fff; max-width:900px; margin:auto; padding:30px; border:1px solid #ccc; }
+h2 { text-align:center; margin-bottom:30px; }
+.top-info { display:flex; justify-content:space-between; margin-bottom:25px; font-weight:bold; }
+label { font-weight:bold; display:block; margin-top:18px; }
+input, select, textarea, canvas { width:100%; margin-top:6px; }
+input, select, textarea { padding:10px; font-size:15px; }
+textarea { min-height:90px; resize:vertical; }
+.row { display:flex; gap:20px; }
+.row > div { flex:1; }
+canvas { border:1px solid #000; height:150px; touch-action:none; background:#fff; }
+.checkbox { margin-top:18px; }
+.checkbox label { font-weight:normal; }
+.checkbox input { transform:scale(1.2); }
+.signature-block { margin-top:20px; }
+.pecset { width:260px; opacity:0.9; }
+button { margin-top:20px; padding:14px; width:100%; font-size:16px; cursor:pointer; }
 </style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -67,16 +40,16 @@ button {
 </div>
 
 <label>Megbízó neve</label>
-<input id="gazdaNev">
+<input id="gazdaNev" type="text">
 
 <label>Cím</label>
-<input id="cim">
+<input id="cim" type="text">
 
 <label>Telefonszám</label>
 <input type="tel">
 
 <label>Megbízott</label>
-<input value="Budai Tamás e.v." readonly>
+<input type="text" value="Budai Tamás e.v." readonly>
 
 <label>Állat adatai</label>
 <select id="allatFajta">
@@ -88,18 +61,12 @@ button {
 
 <div id="egyebAllat" style="display:none;">
   <label>Milyen állat?</label>
-  <input>
+  <input type="text">
 </div>
 
 <div class="row">
-  <div>
-    <label>Név</label>
-    <input>
-  </div>
-  <div>
-    <label>Chip szám</label>
-    <input>
-  </div>
+  <div><label>Név</label><input type="text"></div>
+  <div><label>Chip szám</label><input type="text"></div>
 </div>
 
 <div class="row">
@@ -111,18 +78,15 @@ button {
       <option>Ismeretlen</option>
     </select>
   </div>
-  <div>
-    <label>Súly (kg)</label>
-    <input type="number">
-  </div>
+  <div><label>Súly (kg)</label><input type="number"></div>
 </div>
 
-<label>Implantátum?</label>
-<div class="checkbox"><label>Igen</label><input type="checkbox"></div>
-<div class="checkbox"><label>Nem</label><input type="checkbox"></div>
+<label>Implantátum van?</label>
+<div class="checkbox"><label>Igen</label><input type="checkbox" class="implant"></div>
+<div class="checkbox"><label>Nem</label><input type="checkbox" class="implant"></div>
 
 <label>Milyen urna?</label>
-<input>
+<input type="text">
 
 <label>Urna állapota</label>
 <select>
@@ -134,6 +98,12 @@ button {
 <div class="checkbox"><label>Készpénz</label><input type="checkbox"></div>
 <div class="checkbox"><label>Átutalás</label><input type="checkbox"></div>
 
+<label>Elszállításnál fizetett összeg (Ft)</label>
+<input type="number">
+
+<label>Visszaszállításnál fizetendő összeg (Ft)</label>
+<input type="number">
+
 <label>Megjegyzés</label>
 <textarea></textarea>
 
@@ -141,50 +111,57 @@ button {
 <canvas id="signUser"></canvas>
 
 <label>Ügyfél email címe</label>
-<input id="ugyfelEmail" type="email">
+<input id="ugyfelEmail" type="email" required>
 
 <button id="pdfBtn">PDF készítés és küldés</button>
 
 </div>
 
 <script>
-const d = new Date();
-const ds = `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
-datum.innerText = ds;
-let c = localStorage.getItem("erk") || 0;
-localStorage.setItem("erk", ++c);
-erkszam.innerText = `${ds}-${String(c).padStart(4,"0")}`;
+/* DÁTUM */
+const d=new Date();
+const ds=`${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
+datum.innerText=ds.replaceAll("-", ".");
+erkszam.innerText=ds;
 
-allatFajta.onchange = e =>
-  egyebAllat.style.display = e.target.value==="Egyéb" ? "block" : "none";
+/* EGYÉB ÁLLAT */
+allatFajta.onchange=e=>egyebAllat.style.display=e.target.value==="Egyéb"?"block":"none";
 
-const canvas = document.getElementById("signUser");
-const ctx = canvas.getContext("2d");
-canvas.width = canvas.offsetWidth;
-canvas.height = 150;
+/* IMPLANT */
+document.querySelectorAll(".implant").forEach(cb=>{
+ cb.onchange=()=>document.querySelectorAll(".implant").forEach(o=>o!==cb&&(o.checked=false));
+});
+
+/* ALÁÍRÁS */
+const canvas=document.getElementById("signUser");
+const ctx=canvas.getContext("2d");
+canvas.width=canvas.offsetWidth; canvas.height=150;
 let draw=false;
-canvas.onmousedown=e=>{draw=true;ctx.moveTo(e.offsetX,e.offsetY)};
-canvas.onmousemove=e=>{if(draw){ctx.lineTo(e.offsetX,e.offsetY);ctx.stroke()}};
-canvas.onmouseup=()=>draw=false;
+function pos(e){const r=canvas.getBoundingClientRect();return e.touches?{x:e.touches[0].clientX-r.left,y:e.touches[0].clientY-r.top}:{x:e.clientX-r.left,y:e.clientY-r.top};}
+["mousedown","touchstart"].forEach(ev=>canvas.addEventListener(ev,e=>{e.preventDefault();draw=true;const p=pos(e);ctx.beginPath();ctx.moveTo(p.x,p.y);}));
+["mousemove","touchmove"].forEach(ev=>canvas.addEventListener(ev,e=>{if(!draw)return;e.preventDefault();const p=pos(e);ctx.lineWidth=2;ctx.lineCap="round";ctx.lineTo(p.x,p.y);ctx.stroke();}));
+["mouseup","touchend","mouseleave"].forEach(ev=>canvas.addEventListener(ev,()=>{draw=false;ctx.beginPath();}));
 
-function clean(s){
-  return s.normalize("NFD").replace(/[\u0300-\u036f]/g,"").replace(/[^a-zA-Z0-9]+/g,"_");
-}
+/* FÁJLNÉV */
+function clean(str){return str.normalize("NFD").replace(/[\u0300-\u036f]/g,"").replace(/[^a-zA-Z0-9]+/g,"_");}
 
-pdfBtn.onclick = async () => {
-  const fileName = `azonosito_${ds}_${clean(gazdaNev.value)}_${clean(cim.value)}.pdf`;
+pdfBtn.onclick=async()=>{
+ if(!ugyfelEmail.value){alert("Email kötelező");return;}
+ const fileName=`${ds}_${clean(cim.value)}.pdf`;
+ const pdfBlob=await html2pdf().from(doc).set({
+  margin:10,
+  html2canvas:{scale:window.innerWidth<768?0.65:0.85},
+  jsPDF:{unit:"mm",format:"a4"}
+ }).outputPdf("blob");
 
-  const pdfBlob = await html2pdf()
-    .from(document.getElementById("doc"))
-    .set({ html2canvas:{scale:1}, jsPDF:{format:"a4"} })
-    .outputPdf("blob");
+ const fd=new FormData();
+ fd.append("pdf",pdfBlob,fileName);
+ fd.append("ugyfelEmail",ugyfelEmail.value);
+ fd.append("gazdaNev",gazdaNev.value);
+ fd.append("cim",cim.value);
 
-  const fd = new FormData();
-  fd.append("pdf", pdfBlob, fileName);
-  fd.append("ugyfelEmail", ugyfelEmail.value);
-
-  await fetch("/send-pdf",{method:"POST",body:fd});
-  alert("Kész!");
+ await fetch("/send-pdf",{method:"POST",body:fd});
+ alert("PDF elküldve");
 };
 </script>
 
