--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ input, select, textarea { padding:10px; font-size:15px; }
 textarea { min-height:90px; }
 .row { display:flex; gap:20px; }
 .row > div { flex:1; }
-canvas { border:1px solid #000; height:150px; background:#fff; touch-action:none; }
-.checkbox { margin-top:12px; }
+canvas { border:1px solid #000; height:150px; background:#fff; }
+.checkbox { margin-top:10px; }
 .checkbox label { font-weight:normal; }
 button { margin-top:25px; padding:14px; width:100%; font-size:16px; cursor:pointer; }
 </style>
@@ -48,7 +48,7 @@ button { margin-top:25px; padding:14px; width:100%; font-size:16px; cursor:point
 <label>Megbízott</label>
 <input type="text" value="Budai Tamás e.v." readonly>
 
-<label>Állat fajtája</label>
+<label>Állat adatai</label>
 <select id="allatFajta">
   <option value="">Válasszon</option>
   <option>Kutya</option>
@@ -87,7 +87,7 @@ button { margin-top:25px; padding:14px; width:100%; font-size:16px; cursor:point
   </div>
 </div>
 
-<label>Urna típusa</label>
+<label>Milyen urna?</label>
 <input type="text">
 
 <label>Urna állapota</label>
@@ -98,7 +98,13 @@ button { margin-top:25px; padding:14px; width:100%; font-size:16px; cursor:point
 
 <label>Fizetés módja</label>
 <div class="checkbox"><label><input type="checkbox"> Készpénz</label></div>
-<div class="checkbox"><label><input type="checkbox"> Átutalás</label></div>
+<div class="checkbox"><label><input type="checkbox"> Átutalás (egy összegben)</label></div>
+
+<label>Elszállításnál fizetett összeg (Ft)</label>
+<input type="number">
+
+<label>Visszaszállításnál fizetendő összeg (Ft)</label>
+<input type="number">
 
 <label>Megjegyzés</label>
 <textarea></textarea>
@@ -107,7 +113,7 @@ button { margin-top:25px; padding:14px; width:100%; font-size:16px; cursor:point
 <canvas id="signUser"></canvas>
 
 <label>Ügyfél email címe</label>
-<input type="email" id="ugyfelEmail" required>
+<input type="email" id="ugyfelEmail">
 
 <button id="pdfBtn">PDF készítés</button>
 
@@ -139,11 +145,11 @@ function clean(str){
   return str.normalize("NFD").replace(/[\u0300-\u036f]/g,"").replace(/[^a-zA-Z0-9]+/g,"_");
 }
 
-pdfBtn.onclick = async () => {
+pdfBtn.onclick = () => {
   const cim = document.getElementById("cim").value || "cim_nelkul";
   const fileName = `azonosito_lap_${ds}_${clean(cim)}.pdf`;
 
-  await html2pdf().from(document.getElementById("doc")).set({
+  html2pdf().from(document.getElementById("doc")).set({
     filename: fileName,
     html2canvas:{ scale:0.85 },
     jsPDF:{ unit:"mm", format:"a4" }
